--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "nado-protocol"
 version = "0.1.0"
 description = "Nado Protocol SDK"
 authors = ["Jeury Mejia <jeury@inkfnd.com>"]
-homepage = "https://nadoprotocol.com/"
+homepage = "https://nado.xyz"
 maintainers = ["Frank Jia <frank@inkfnd.com>"]
 documentation = "https://nadohq.github.io/nado-python-sdk/"
 readme = "README.md"
