--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ client-sanity = "sanity.nado_client:run"
 rewards-sanity = "sanity.rewards:run"
 signing-sanity = "sanity.signing:run"
 margin-sanity = "sanity.margin_manager:run"
+builder-sanity = "sanity.builder:run"
 
 [[tool.poetry.source]]
 name = "private"
